--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "feignhttp"
-version = "0.5.3"
+version = "0.5.4"
 authors = ["dxx <dx1898@foxmail.com>"]
 edition = "2021"
 description = "Declarative HTTP client for rust"
@@ -46,10 +46,10 @@ serde_urlencoded = "0.7"
 # Optional deps...
 
 ## reqwest
-reqwest = { version = "0.11", optional = true }
+reqwest = { version = "0.11", default-features = false, optional = true }
 
 ## isahc
-isahc = { version = "1.7", optional = true }
+isahc = { version = "1.7", default-features = false, optional = true }
 
 ## json
 serde_json = { version = "1.0", optional = true }
