--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "feignhttp"
-version = "0.5.4"
+version = "0.5.5"
 authors = ["dxx <dx1898@foxmail.com>"]
 edition = "2021"
 description = "Declarative HTTP client for rust"
@@ -31,8 +31,8 @@ reqwest-client-rustls=["reqwest/rustls-tls"]
 isahc-client = ["isahc"]
 isahc-client-rustls = ["isahc/rustls-tls"]
 
-
-json = ["serde_json", "reqwest/json", "isahc/json"]
+# , "isahc/json"
+json = ["serde_json", "reqwest/json"]
 
 [dependencies]
 feignhttp-codegen = { version = "0.5", path = "codegen" }
@@ -49,7 +49,7 @@ serde_urlencoded = "0.7"
 reqwest = { version = "0.11", default-features = false, optional = true }
 
 ## isahc
-isahc = { version = "1.7", default-features = false, optional = true }
+isahc = { version = "1.7",default-features = false, optional = true }
 
 ## json
 serde_json = { version = "1.0", optional = true }
