--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "feignhttp"
-version = "0.5.7"
+version = "0.5.8"
 authors = ["dxx <dx1898@foxmail.com>"]
 edition = "2021"
 description = "Declarative HTTP client for rust"
@@ -49,7 +49,7 @@ serde_urlencoded = "0.7"
 reqwest = { version = "0.11", default-features = false, optional = true }
 
 ## isahc
-isahc = { version = "1.7.0",default-features = false, optional = true }
+isahc = { version = "1.7.0",default-features = false, features=["json"], optional = true }
 
 ## json
 serde_json = { version = "1.0", optional = true }
