--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "feignhttp"
-version = "0.5.8"
+version = "0.5.9"
 authors = ["dxx <dx1898@foxmail.com>"]
 edition = "2021"
 description = "Declarative HTTP client for rust"
@@ -32,7 +32,7 @@ isahc-client = ["isahc"]
 isahc-client-rustls = ["isahc/rustls-tls"]
 
 # , "isahc/json"
-json = ["serde_json", "isahc/json"]
+json = ["serde_json", "reqwest/json"]
 
 [dependencies]
 feignhttp-codegen = { version = "0.5", path = "codegen" }
