--- a/.github/workflows/sync2gitee.yaml
+++ b/.github/workflows/sync2gitee.yaml
@@ -4,12 +4,11 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - master
+      - main
 jobs:
   repo-sync:
     env:
       dst_key: ${{ secrets.GITEE_PRIVATE_KEY }}
-      dst_token: ${{ secrets.GITEE_TOKEN }}
       gitee_user: ${{ secrets.GITEE_USER }}
     runs-on: ubuntu-latest
     steps:
